--- a/Index.html
+++ b/Index.html
@@ -4,101 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Proposal Game</title>
-  <style>
-    /* General styles */
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-image: url('/background.jpeg');
-      background-size: cover;
-      background-position: center;
-      color: #333;
-      overflow-x: hidden; /* Prevent horizontal scroll on smaller screens */
-    }
-    .container {
-      max-width: 90%;
-      margin: 50px auto;
-      padding: 20px;
-      background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent white background */
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-      text-align: center;
-      position: relative; /* Required for absolute positioning */
-      animation: fadeIn 1s ease; /* Fade-in animation */
-    }
-    h1, h2 {
-      text-align: center;
-      color: #333;
-    }
-    .message-container {
-      margin-top: 30px;
-      text-align: left;
-    }
-    .message {
-      display: none;
-      margin-bottom: 20px;
-      font-size: 18px;
-      animation: slideInLeft 1s ease; /* Slide-in animation */
-    }
-    .btn-container {
-      text-align: center;
-      margin-top: 20px;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: #ff4d4d; /* Romantic red */
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-    button:hover {
-      background-color: #ff3333;
-    }
-    /* Floating heart animation */
-    .heart {
-      position: absolute;
-      top: -50px;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 30px;
-      animation: floatHeart 3s infinite ease-in-out;
-    }
-    
-    @keyframes floatHeart {
-      0% {
-        transform: translateX(-50%) translateY(0);
-      }
-      50% {
-        transform: translateX(-50%) translateY(-30px);
-      }
-      100% {
-        transform: translateX(-50%) translateY(0);
-      }
-    }
-
-    /* Animation keyframes */
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 1;
-      }
-    }
-
-    @keyframes slideInLeft {
-      from {
-        transform: translateX(-100%);
-      }
-      to {
-        transform: translateX(0);
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -146,26 +52,7 @@
         <div class="heart">&hearts;</div>
       </div>
       
-
-<script>
-  const messages = document.querySelectorAll('.message');
-  let currentMessage = 0;
-
-  function showNextMessage() {
-    if (currentMessage < messages.length) {
-      if (currentMessage > 0) {
-        messages[currentMessage - 1].style.display = 'none'; // Hide previous message
-      }
-      messages[currentMessage].style.display = 'block'; // Show current message
-      currentMessage++;
-    } else {
-      document.getElementById('nextBtn').style.display = 'none';
-      document.getElementById('messageContainer').innerHTML += '<div class="message">Your proposal has been sent! Good luck!</div>';
-    }
-  }
-
-  document.getElementById('nextBtn').addEventListener('click', showNextMessage);
-</script>
+<script src="script.js"></script>
 
 </body>
 </html>
